fix filter function on no value, fix word-break on query swap, fix non chrome copy to clipboard bug

--- a/css/app/dashboard.css
+++ b/css/app/dashboard.css
@@ -71,6 +71,8 @@
       padding: 8px; }
   #webprofiler pre, #webprofiler code {
     white-space: normal;
+    word-break: break-all;
+    word-break: break-word;
     font-size: 14px; }
   #webprofiler thead {
     white-space: nowrap; }
